<resources>
    <string name="app_name">Realtime Location Gps</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="unknown_response">Unexpected onActivityResult response code</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">An unknown error occurred</string>
    <!-- Auth UI - Signed in -->
    <string name="signed_in_header">You are signed in!</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account_label">Delete account</string>
    <string name="login_account_label">Sign in</string>

    <string name="sign_out_failed">Sign out failed</string>
    <string name="delete_account_failed">Delete account failed</string>

    <string name="user_profile_header">User profile:</string>
    <string name="profile_picture_content_desc">Profile picture</string>
    <string name="idp_token">IDP Token</string>
    <string name="idp_secret">IDP Secret</string>
    <string
        name="location_permissions_required">Location permissions are required for tracking
        location. Please grant these permissions to continue.</string>
    <string
        name="login_required">Application need authentication for tracking
        location.Please sign in to continue.</string>
    <string name="missing_inputs">Please enter a device ID</string>
    <string name="tracking">Tracking &#x2713;</string>
    <string name="not_tracking">Not tracking &#x2718;</string>
    <string name="connecting">Connecting &#8230;</string>
    <string name="status">status</string>
    <string name="location_lat">location_lat</string>
    <string name="location_lng">location_lng</string>
    <string name="location_permission_required">Location permission required.</string>
    <string name="gps_required">Gps not enabled.</string>
    <string name="ok">OK</string>
    <string name="enable">Enable</string>
    <string name="auth_failed">Firebase authentication failed</string>
    <string name="gplay_failed">Google play service failed</string>
    <string name="confirm_stop">Do you really want to disable location tracking?</string>
    <string name="enter_device_id">Enter device id</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>


    <string name="admob_uid" translatable="false">ca-app-pub-3288543917013516~8688956469/</string>
    <!--// Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713-->
    <!--My uid:ca-app-pub-3288543917013516~8688956469-->
    <string name="firebase_path" translatable="false">geo_devices/</string>
    <string name="prefs" translatable="false">prefs</string>
    <string name="device_id" translatable="false">device_id</string>
</resources>
