<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/content_main">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:padding="@dimen/activity_horizontal_margin"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/card_background"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/textPrimary"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/textPrimary"
                android:textColorHighlight="@color/textPrimary"
                android:textColorHint="@color/textPrimary"
                android:textColorLink="@color/textPrimary" />

            <TextView
                android:id="@+id/permissionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/textPrimary"
                android:text="@string/location_permissions_required"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/textPrimary"
                android:textColorHighlight="@color/textPrimary"
                android:textColorHint="@color/textPrimary"
                android:textColorLink="@color/textPrimary"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/textPrimary"
                android:text="@string/login_required"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/textPrimary"
                android:textColorHighlight="@color/textPrimary"
                android:textColorHint="@color/textPrimary"
                android:textColorLink="@color/textPrimary"
                android:visibility="gone" />

            <EditText
                android:id="@+id/transport_id"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/permissionText"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/textPrimary"
                android:hint="@string/enter_device_id"
                android:maxLines="1"
                android:textColor="@color/textPrimary"
                android:textColorHighlight="@color/textPrimary"
                android:textColorHint="@color/io_accent5" />

            <LinearLayout
                android:id="@+id/location_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/transport_id"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/latText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/textPrimary"
                    android:text="..."
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/textPrimary"
                    android:text=" , "
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/lngText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/textPrimary"
                    android:text="..."
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/location_layout"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_start"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/start_tracking"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/login_account_label"
                    android:theme="@style/LoginButton"
                    android:visibility="gone"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/admob_uid"></com.google.android.gms.ads.AdView>

</RelativeLayout>
